Fixed: App uses images that are full bleed in the list_item_article layout

--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -25,6 +25,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:scaleType="centerCrop"
             android:transitionName="@string/transition_photo"
             android:background="@color/photo_placeholder" />
 
